--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
                 <nav class="navbar navbar-expand-lg  ">
                     <div class="container-fluid">
-                        <a class="navbar-brand text-white" href="#"> <b> D I M A H A S O - A S S A M</b><span> <i class="fa-solid fa-angles-right fa-fade fa-md" style="color: #215d94;"></i></span></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        <a class="navbar-brand text-white" href="#"> <b> D I M A H A S O - A S S A M</b><span> <i class="fa-solid fa-angles-right fa-fade fa-md" style="color: #d5d5d5;"></i></span></a>
+                        <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                            <span class="navbar-toggler-icon text-white"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav d-flex ms-auto text-center">
@@ -80,7 +80,7 @@
                                 </li>
                             </ul>
 
-                            <span><i class="fa-solid fa-arrow-down fa-fade fa-xl" style="color: #28529a;"></i></span>
+                            <span><i class="fa-solid fa-arrow-down fa-fade fa-xl" style="color: #d0d0d0;"></i></span>
 
                            
                         </div>
@@ -127,8 +127,8 @@
 <br><br>
 
 
-<button type="button" class="btn btn-outline-secondary readme text-white ms-5">R e a d - M o r e <span><i class="fa-solid fa-angles-right fa-fade fa-lg" style="color: #215d94;"></i></span> </button>
-<button type="button" class="btn btn-outline-secondary text-white ms-3">C o n t a c t <span><i class="fa-solid fa-angles-right fa-fade fa-lg" style="color: #215d94;"></i></span> </button>
+<button type="button" class="btn btn-outline-secondary readme text-white ms-5">R e a d - M o r e <span><i class="fa-solid fa-angles-right fa-fade fa-lg" style="color: #c3c3c3;"></i></span> </button>
+<button type="button" class="btn btn-outline-secondary text-white ms-3">C o n t a c t <span><i class="fa-solid fa-angles-right fa-fade fa-lg" style="color: #c7c7c7;"></i></span> </button>
 <br>
 <span class="socialApps2 ms-5">
 
