--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
 <!-------------------------------------------------------- header section starts---------------------------------------------------------->
     <div class="container-fluid">
-<div class="row text-center">
+<div class="row">
     <div class="col-lg-6 fixed_top">
-        <button class="btn bg-white border border-1 text-dark white">BG-WHITE</button>   
-        <button class="btn bg-primary text-white border border-1 skyblue">BG-SKYBLUE</button>   
-        <button class="btn btn-secondary blue">BG-BLUE</button>   
-        <button class="btn btn-dark black">BG-BLACK</button>  
+        <b><i class="fa-solid fa-arrow-right fa-shake fa-2xl" style="color: #b30000;"></i> <span class=" text-danger">S E L E C T - YOUR THEME : </span></b>
+        <button class="btn bg-primary border border-1 text-white white">BG-1</button>   
+        <button class="btn bg-primary text-white border border-1 skyblue">BG-2</button>   
+        <button class="btn btn-primary blue">BG-3</button>   
+        <button class="btn btn-primary black">BG-4</button>  
     
  
     </div>
@@ -82,7 +83,7 @@
                         <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
-                            <span><i class="fa-solid fa-bars fa-fade fa-lg" style="color: #a3a3a3;"></i></span>
+                            <span><i class="fa-solid fa-bars fa-lg" style="color: #ffffff;"></i></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav d-flex ms-auto text-center">
@@ -110,14 +111,14 @@
 
 
                 <!-- header google search button -->
-                <nav class="navbar ">
+                <!-- <nav class="navbar ">
                     <div class="container-fluid">
                       <form class="d-flex btn_outlined1" role="search">
                         <input class="form-control  btn_outlined  text_black text_white " type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn_outlined " type="submit"><a class="text_dark google_outline" href="#">Google</a> </button>
                       </form>
                     </div>
-                  </nav>
+                  </nav> -->
 
                 <!--header google search button -->
                 <hr>
@@ -129,7 +130,7 @@
 
 <!-------------------------------------------- header second row starts ---------------------------------------->
 
-        <div class="row ">
+        <div class="row second_wraper">
 
             <!-- header second row left part -->
             <div class="col-lg-6 ">
@@ -214,7 +215,7 @@
     <!--------------------------------------------------- header section ends ---------------------------------------------------->
 
 
-<hr>
+
 
 <br><br><br>
 
@@ -223,8 +224,9 @@
 <div class="container-fluid">
 
     <div class="row text-center">
-
+<hr>
         <h1 class="text_black text_white"> <b>W e l c o m e to Place Of <span class="text-primary">Heaven</span>  <br> <span class="text-primary"> D I M A H A S O</span> - A S S A M.</b> </h1> 
+        <hr>
 <!-- second sec left part -->
         <div class="col-6 mt-5">
 <p class="text_black text_white text-start"> <b><i class="text-primary">D i m a H a s a o</i></b>   district is an autonomous district enjoying the Sixth Schedule status granted by the Constitution of India. The Dima Hasao District is administered by North Cachar Hills Autonomous Council (NCHAC). The Autonomous Council is a powerful body and almost all the department of government are under its control except the police and Law & Order is under Assam Government.
@@ -299,12 +301,12 @@ The district is situated at Southern part of Assam in the North East Region of I
 
 
 
-<hr>
+
 <!----------------------------------------------------------------- 3rd section ------------------------------------------------------->
 <br><br><br>
 
     <div class="container-fluid text-center">
-
+        <hr>
         <h1 class="text_black text_white"> <span class="text-primary">Some</span>  Beautiful Places Of <b class="text-primary">Dimahasao</b>  Assam...</h1>
         <hr>
         <div class="row ">
@@ -415,6 +417,7 @@ The district is situated at Southern part of Assam in the North East Region of I
 
 <br><br><br>
 <div class="container-fluid">
+    <hr>
     <i><b><h1 class="text-center text-primary">G e l l e r y</h1></b></i>
     <i><b><h1 class="text-center text_black text_white">Some Pictures Of Beautiful places.</h1></b></i>
     <hr>
@@ -509,7 +512,7 @@ The district is situated at Southern part of Assam in the North East Region of I
  
    
 </div>
-<hr>
+
 
 <br><br><br><br>
 
@@ -520,6 +523,7 @@ The district is situated at Southern part of Assam in the North East Region of I
 
 
 <div class="container ">
+    <hr>
     <h1 class="text_black text_white text-center"><i> <b> S o m e - B e a u t i f u l <span class="text-primary">- M e m o r i e s</span>  <br> <span class="text-primary">- C a p t u r e d</span>  - by our best - V l o g g e r s</b>...</i> </h1>
     <hr>
                                                                                                            <!-- ?&autoplay=1 -->
@@ -584,14 +588,14 @@ The district is situated at Southern part of Assam in the North East Region of I
         
     </div>
 </div>
-<hr>
+
 
 <br><br><br><br>
 
 
 
 <div class="container">
-
+<hr>
    <i><b><h1 class="text-center text_black text_white">S o m e - S h o r t - B e a u t i f u l - V i d e o s.</h1></b></i> 
     <hr>
     <div class="row">
