--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
     <div class="container-fluid">
 <div class="row">
     <div class="col-lg-12 fixed_top">
+        <!-- <b><i class="fa-solid fa-arrow-right fa-shake fa-2xl" style="color: #b30000;"></i></b> -->
+        <button class="btn bg-primary border border-1 text-white white">1</button>   <br>
+        <button class="btn bg-primary text-white border border-1 mt-2 skyblue">2</button>  <br> 
+        <!-- <button class="btn btn-primary blue mt-2">3</button>   <br> -->
+        <button class="btn btn-primary black mt-2">4</button>  
+    
+ 
+    </div>
+
+    <div class="col-lg-12">
         <b><i class="fa-solid fa-arrow-right fa-shake fa-2xl" style="color: #b30000;"></i> <span class=" text-danger">S E L E C T - YOUR THEME : </span></b>
-        <button class="btn bg-primary border border-1 text-white white">BG-1</button>   
-        <button class="btn bg-primary text-white border border-1 skyblue">BG-2</button>   
-        <button class="btn btn-primary blue">BG-3</button>   
-        <button class="btn btn-primary black">BG-4</button>  
+        <button class="btn bg-primary border border-1 text-white white">1</button>   
+        <button class="btn bg-primary text-white border border-1 skyblue">2</button>   
+        <button class="btn btn-primary blue">3</button>   
+        <button class="btn btn-primary black">4</button>  
     
  
     </div>
@@ -41,7 +51,7 @@
         <div class="row mt-2">
             <div class="col-lg-12 ">
 
-                <div class="alert alert-primary alert-dismissible fade show " role="alert ">
+                <div class="alert alert-primary alert-dismissible fade show  fixed" role="alert ">
                     <div class="notification ">
                         <span class="me-5 "><strong>Krishan!</strong> We are proud that we live in Dimahasao Assam.  Today I want to share some good moments and scenarios...</span> 
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
