--- a/index.html
+++ b/index.html
@@ -78,26 +78,26 @@
    <!-- social media links -->
                     </div>
 <div class="row  ">
-    <div class="col-lg-12">
+    <div class="col-lg-12 socialApps3">
    <!-- social media links -->
-   <span class="socialApps3 ms-5">
+   <span class=" ">
 
-    <a href=""><i data-aos="fade-down" data-aos-duration="3000" class="fa-brands fa-whatsapp fa-xl me-4" style="color: #03b300;"></i></a>
+    <a href=""><i data-aos="fade-down" data-aos-duration="3000" class="fa-brands fa-whatsapp fa-xl me-4" style="color: #49ff46;"></i></a>
 
     <a href=""><i data-aos="fade-up" data-aos-duration="3000" class="fa-brands fa-github  fa-xl me-4"
-        style="color: #4f78f4;"></i></a>
+        style="color: #ffffff;"></i></a>
 
     <a href=""><i data-aos="fade-down" data-aos-duration="3000"
-            class="fa-brands fa-linkedin  fa-xl me-4" style="color: #1753ba;"></i></a>
+            class="fa-brands fa-linkedin  fa-xl me-4" style="color: #000000;"></i></a>
 
     <a href=""><i data-aos="fade-up" data-aos-duration="3000"
-            class="fa-brands fa-pinterest  fa-xl me-4" style="color: #da1b4b;"></i></a>
+            class="fa-brands fa-pinterest  fa-xl me-4" style="color: #ff3f3f;"></i></a>
 
     <a href=""><i data-aos="fade-down" data-aos-duration="3000"
-            class="fa-brands fa-twitter  fa-xl me-4" style="color: #4d8eff;"></i></a>
+            class="fa-brands fa-twitter  fa-xl me-4" style="color: #000000;"></i></a>
 
     <a href=""><i data-aos="fade-up" data-aos-duration="3000"
-            class="fa-brands fa-youtube fa-xl me-4" style="color: #f02424;"></i></a>
+            class="fa-brands fa-youtube fa-xl me-4" style="color: #ff0d0d;"></i></a>
     </span>
 <!-- social media links -->
 
@@ -209,7 +209,7 @@
 <br><br>
 <!-- google search buttons 2 -->
 <nav class="navbar search_button2">
-    <div class="container-fluid">
+    <div class="container">
       <form class="d-flex btn_outlined1" role="search">
         <input class="form-control  btn_outlined  text_black text_white " type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn_outlined" type="submit"><a class="text_black text_white bg-primary p-1 border border-1" href="#">Google</a> </button>
@@ -236,7 +236,7 @@
 
 
 <!--------------------------------------------------------- Second Section starts ----------------------------------------------------------------->
-<div class="container-fluid">
+<div class="container">
 
     <div class="row text-center">
 <hr>
@@ -320,7 +320,7 @@ The district is situated at Southern part of Assam in the North East Region of I
 <!----------------------------------------------------------------- 3rd section ------------------------------------------------------->
 <br><br><br>
 
-    <div class="container-fluid text-center">
+    <div class="container text-center">
         <hr>
         <h1 class="text_black text_white"> <span class="text-primary">Some</span>  Beautiful Places Of <b class="text-primary">Dimahasao</b>  Assam...</h1>
         <hr>
@@ -431,7 +431,7 @@ The district is situated at Southern part of Assam in the North East Region of I
 
 
 <br><br><br>
-<div class="container-fluid">
+<div class="container">
     <hr>
     <i><b><h1 class="text-center text-primary">G e l l e r y</h1></b></i>
     <i><b><h1 class="text-center text_black text_white">Some Pictures Of Beautiful places.</h1></b></i>
