--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <!-------------------------------------------------------- header section starts---------------------------------------------------------->
-    <div class="container-fluid">
+    <div class="container-fluid " id="home">
         <div class="row">
             <div class="col-lg-12 fixed_top">
 
@@ -158,25 +158,24 @@
                             <ul class="navbar-nav d-flex ms-auto text-center">
                                 <li class="nav-item ">
                                     <a class="nav-link links_outline_border links_outline_border1 text_black text-white   me-5"
-                                        aria-current="page" href="#"><b>H o m e</b> </a>
+                                        aria-current="page" href="#home"><b>H o m e</b> </a>
                                 </li>
 
 
                                 <li class="nav-item ">
-                                    <a class="nav-link links_outline_border text_black text-white me-5" href="#"><b>G e
+                                    <a class="nav-link links_outline_border text_black text-white me-5" href="#gellery"><b>G e
                                             l l e r y</b></a>
                                 </li>
 
 
                                 <li class="nav-item ">
-                                    <a class="nav-link links_outline_border text_black text-white me-5" href="#"><b>C o
-                                            n t a c t</b></a>
+                                    <a class="nav-link links_outline_border text_black text-white me-5" href="#vlogg"><b>V l o g g</b></a>
                                 </li>
 
 
                                 <li class="nav-item ">
                                     <a class="nav-link links_outline_border text_black text-white me-5"
-                                        aria-disabled="true"><b>F e e d b a c k</b></a>
+                                        href="#videos"><b>S h o r t - V i d e o s</b></a>
                                 </li>
 
                             </ul>
@@ -616,7 +615,7 @@
 
     <br><br><br>
     <!---------------------------------------------------------------- fourth section starts -------------------------------------------------------->
-    <div class="container">
+    <div class="container" id="gellery">
         <hr>
         <i><b>
                 <h1 class="text-center text-primary">G e l l e r y</h1>
@@ -784,7 +783,7 @@
 
 
     <!----------------------------------------------------------- fifth section starts------------------------------------------------------ -->
-    <div class="container ">
+    <div class="container " id="vlogg">
         <hr>
 
 
@@ -920,7 +919,7 @@
 
 
     <!-------------------------------------------------------- sixth section starts -------------------------------------------------------------->
-    <div class="container">
+    <div class="container" id="videos">
         <hr>
         <i><b>
                 <h1 class="text-center text_black text_white">S o m e - S h o r t - B e a u t i f u l - V i d e o s.
@@ -1111,6 +1110,9 @@
 
         </div>
     </div>
+
+    <a href="#home"> <img class="fixed_up_png" src="img/pngfind.com-up-arrow-png-303872 (1).png" alt=""></a> 
+    
     <!--------------------------------------------------------- eight section ends here --------------------------------------------------------->
 
 
