--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 
 
 
-                        <a class="navbar-brand text_black text_black text-white" href="#"> <b> D I M A H A S O - A S S A
-                                M</b><span> <i class="fa-solid fa-angles-right fa-fade fa-md"
-                                    style="color: #d5d5d5;"></i></span></a>
+                       <button class="btn btn-primary"><a class="navbar-brand text_black text_black text-white" href="https://krishchakroborty.github.io/Dimahasao_Assam_Project2/" target="_blank"> <b> D I M A - H A S A O - A S S A
+                        M</b><span> <i class="fa-solid fa-angles-right fa-fade fa-md"
+                            style="color: #d5d5d5;"></i></span></a></button> 
 
 
 
