--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <meta name="description" content="Making a Page For Some Beautiful Places of Assam">
     <title>DIMA HASAO ASSAM (Place of Heaven)</title>
 
+    <!-- fav icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+  <link rel="manifest" href="favicons/site.webmanifest">
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+<!-- fav icons -->
+
+
 
     <script src="https://kit.fontawesome.com/d7dc2731d7.js" crossorigin="anonymous"></script>
 
